libblkid: add blkid_probe_get_{offset,fd} functions
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/blkid/src/blkid.h.in
+++ b/shlibs/blkid/src/blkid.h.in
@@ -198,7 +198,10 @@ extern int blkid_probe_set_device(blkid_probe pr, int fd,
 
 extern dev_t blkid_probe_get_devno(blkid_probe pr);
 extern blkid_loff_t blkid_probe_get_size(blkid_probe pr);
+extern blkid_loff_t blkid_probe_get_offset(blkid_probe pr);
 extern unsigned int blkid_probe_get_sectorsize(blkid_probe pr);
+
+extern int blkid_probe_get_fd(blkid_probe pr);
 
 /*
  * superblocks probing
