lib: add mangle.c for mtab (fstab or swaps) encoding
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -2,11 +2,12 @@ include $(top_srcdir)/config/include-Makefile.am
 
 AM_CPPFLAGS += -DTEST_PROGRAM
 
-noinst_PROGRAMS = test_blkdev test_ismounted test_wholedisk
+noinst_PROGRAMS = test_blkdev test_ismounted test_wholedisk test_mangle
 
 test_blkdev_SOURCES = blkdev.c
 test_ismounted_SOURCES = ismounted.c
 test_wholedisk_SOURCES = wholedisk.c
+test_mangle_SOURCES = mangle.c
 
 if LINUX
 test_blkdev_SOURCES += linux_version.c
