swapon: use unmangle() for filenames from /proc/swaps
linux kernel encodes all garbage in filenames by mangle() function. We
need to unmagle() to get the real filenames.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/Makefile.am
+++ b/mount/Makefile.am
@@ -37,7 +37,8 @@ umount_LDFLAGS = $(SUID_LDFLAGS) $(AM_LDFLAGS)
 umount_LDADD = $(ldadd_common)
 
 swapon_SOURCES = swapon.c swap_constants.h ../lib/linux_version.c \
-	../lib/blkdev.c ../lib/fsprobe.c ../lib/canonicalize.c
+	../lib/blkdev.c ../lib/fsprobe.c ../lib/canonicalize.c \
+	../lib/mangle.c
 swapon_CFLAGS = $(cflags_common)
 swapon_LDADD = $(ldadd_common)
 
