--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -2,12 +2,14 @@ include $(top_srcdir)/config/include-Makefile.am
 
 AM_CPPFLAGS += -DTEST_PROGRAM
 
-noinst_PROGRAMS = test_blkdev test_ismounted test_wholedisk test_mangle
+noinst_PROGRAMS = test_blkdev test_ismounted test_wholedisk test_mangle \
+		  test_strtosize
 
 test_blkdev_SOURCES = blkdev.c
 test_ismounted_SOURCES = ismounted.c
 test_wholedisk_SOURCES = wholedisk.c
 test_mangle_SOURCES = mangle.c
+test_strtosize_SOURCES = strtosize.c
 
 if LINUX
 test_blkdev_SOURCES += linux_version.c
