libblkid: avoid probing CDs for RAID
RAID probing of CD/DVD can yield errors because of well-known problem
in reading the end of the disk with some disk/drive combinations.
Borrow CD detection method from udev and skip the RAID tests for
these devices.

[kzak@redhat.com: - check for linux/cdrom.h in ./configure
                  - add #ifdef around the ioctl call
                  - call the ioctl for block devices only]

Signed-off-by: Mark Colclough <m.s.colclough@bham.ac.uk>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -108,6 +108,7 @@ AC_CHECK_HEADERS(
 	linux/tiocl.h \
 	linux/version.h \
 	linux/falloc.h \
+	linux/cdrom.h \
 	fcntl.h \
 	locale.h \
 	stdint.h \
