--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -3,7 +3,7 @@ include $(top_srcdir)/config/include-Makefile.am
 AM_CPPFLAGS += -DTEST_PROGRAM
 
 noinst_PROGRAMS = test_blkdev test_ismounted test_wholedisk test_mangle \
-		  test_strtosize
+		  test_strtosize test_tt
 if HAVE_CPU_SET_T
 noinst_PROGRAMS += test_cpuset
 endif
@@ -14,6 +14,7 @@ test_wholedisk_SOURCES = wholedisk.c
 test_mangle_SOURCES = mangle.c
 test_strtosize_SOURCES = strtosize.c
 test_cpuset_SOURCES = cpuset.c
+test_tt_SOURCES = tt.c
 
 if LINUX
 test_blkdev_SOURCES += linux_version.c
