--- a/misc-utils/Makefile.am
+++ b/misc-utils/Makefile.am
@@ -48,6 +48,7 @@ wipefs_CFLAGS = $(AM_CFLAGS) -I$(ul_libblkid_incdir)
 findmnt_LDADD = $(ul_libmount_la)
 findmnt_CFLAGS = $(AM_CFLAGS) -I$(ul_libmount_incdir)
 findmnt_SOURCES = findmnt.c $(top_srcdir)/lib/tt.c
+dist_man_MANS += findmnt.8
 if HAVE_STATIC_BLKID
 sbin_PROGRAMS += blkid.static
 blkid_static_SOURCES = $(blkid_SOURCES)
