--- a/sys-utils/Makefile.am
+++ b/sys-utils/Makefile.am
@@ -25,7 +25,7 @@ info_TEXINFOS = ipc.texi
 
 if BUILD_FALLOCATE
 usrbin_exec_PROGRAMS += fallocate
-fallocate_SOURCES = fallocate.c ../lib/strtosize.c
+fallocate_SOURCES = fallocate.c $(top_srcdir)/lib/strtosize.c
 dist_man_MANS += fallocate.1
 endif
 
