--- a/mount/Makefile.am
+++ b/mount/Makefile.am
@@ -7,7 +7,7 @@ sbin_PROGRAMS = losetup swapon
 dist_man_MANS = fstab.5 mount.8 swapoff.8 swapon.8 umount.8 losetup.8
 
 # generic sources for all programs (mount, umount, losetup)
-srcs_common = sundries.c xmalloc.c ../lib/canonicalize.c sundries.h xmalloc.h
+srcs_common = sundries.c xmalloc.c $(top_srcdir)/lib/canonicalize.c sundries.h xmalloc.h
 
 # generic header for mount and umount
 hdrs_mount = fstab.h mount_mntent.h mount_constants.h \
@@ -15,8 +15,9 @@ hdrs_mount = fstab.h mount_mntent.h mount_constants.h \
 
 # generic sources for mount and umount
 srcs_mount = fstab.c mount_mntent.c getusername.c lomount.c devname.c devname.h \
-	$(srcs_common) $(hdrs_mount) ../lib/env.c ../lib/linux_version.c \
-	../lib/blkdev.c ../lib/fsprobe.c ../lib/mangle.c
+	$(srcs_common) $(hdrs_mount) $(top_srcdir)/lib/env.c \
+	$(top_srcdir)/lib/linux_version.c $(top_srcdir)/lib/blkdev.c \
+	$(top_srcdir)/lib/fsprobe.c $(top_srcdir)/lib/mangle.c
 
 # generic flags for all programs (except losetup)
 # -- note that pkg-config autoconf macros (pkg.m4) does not differentiate
@@ -26,7 +27,8 @@ ldadd_static =
 cflags_common = $(AM_CFLAGS)
 ldflags_static = -all-static
 
-mount_SOURCES = mount.c $(srcs_mount) ../lib/setproctitle.c ../lib/strtosize.c
+mount_SOURCES = mount.c $(srcs_mount) $(top_srcdir)/lib/setproctitle.c \
+		$(top_srcdir)/lib/strtosize.c
 mount_CFLAGS = $(SUID_CFLAGS) $(cflags_common)
 mount_LDFLAGS = $(SUID_LDFLAGS) $(AM_LDFLAGS)
 mount_LDADD = $(ldadd_common)
@@ -36,13 +38,14 @@ umount_CFLAGS = $(SUID_CFLAGS) $(cflags_common)
 umount_LDFLAGS = $(SUID_LDFLAGS) $(AM_LDFLAGS)
 umount_LDADD = $(ldadd_common)
 
-swapon_SOURCES = swapon.c swap_constants.h ../lib/linux_version.c \
-	../lib/blkdev.c ../lib/fsprobe.c ../lib/canonicalize.c \
-	../lib/mangle.c
+swapon_SOURCES = swapon.c swap_constants.h $(top_srcdir)/lib/linux_version.c \
+		$(top_srcdir)/lib/blkdev.c $(top_srcdir)/lib/fsprobe.c \
+		$(top_srcdir)/lib/canonicalize.c $(top_srcdir)/lib/mangle.c
 swapon_CFLAGS = $(cflags_common)
 swapon_LDADD = $(ldadd_common)
 
-losetup_SOURCES = lomount.c $(srcs_common) loop.h lomount.h ../lib/strtosize.c
+losetup_SOURCES = lomount.c $(srcs_common) loop.h lomount.h \
+		$(top_srcdir)/lib/strtosize.c
 losetup_CPPFLAGS = -DMAIN $(AM_CPPFLAGS)
 
 mount_static_LDADD =
