tests: add cpuset regression test
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -3,13 +3,14 @@ include $(top_srcdir)/config/include-Makefile.am
 AM_CPPFLAGS += -DTEST_PROGRAM
 
 noinst_PROGRAMS = test_blkdev test_ismounted test_wholedisk test_mangle \
-		  test_strtosize
+		  test_strtosize test_cpuset
 
 test_blkdev_SOURCES = blkdev.c
 test_ismounted_SOURCES = ismounted.c
 test_wholedisk_SOURCES = wholedisk.c
 test_mangle_SOURCES = mangle.c
 test_strtosize_SOURCES = strtosize.c
+test_cpuset_SOURCES = cpuset.c
 
 if LINUX
 test_blkdev_SOURCES += linux_version.c
