--- a/misc-utils/Makefile.am
+++ b/misc-utils/Makefile.am
@@ -34,8 +34,9 @@ endif
 endif
 
 if BUILD_LIBBLKID
-sbin_PROGRAMS += blkid findfs wipefs findmnt
-dist_man_MANS += blkid.8 findfs.8 wipefs.8
+sbin_PROGRAMS += blkid findfs wipefs
+bin_PROGRAMS += findmnt
+dist_man_MANS += blkid.8 findfs.8 wipefs.8 findmnt.8
 blkid_SOURCES = blkid.c $(top_srcdir)/lib/ismounted.c \
 		$(top_srcdir)/lib/strtosize.c
 blkid_LDADD = $(ul_libblkid_la)
@@ -48,7 +49,6 @@ wipefs_CFLAGS = $(AM_CFLAGS) -I$(ul_libblkid_incdir)
 findmnt_LDADD = $(ul_libmount_la)
 findmnt_CFLAGS = $(AM_CFLAGS) -I$(ul_libmount_incdir)
 findmnt_SOURCES = findmnt.c $(top_srcdir)/lib/tt.c
-dist_man_MANS += findmnt.8
 if HAVE_STATIC_BLKID
 sbin_PROGRAMS += blkid.static
 blkid_static_SOURCES = $(blkid_SOURCES)
