--- a/shlibs/mount/docs/Makefile.am
+++ b/shlibs/mount/docs/Makefile.am
@@ -59,7 +59,7 @@ EXTRA_HFILES=
 
 # Header files to ignore when scanning. Use base file name, no paths
 # e.g. IGNORE_HFILES=gtkdebug.h gtkintl.h
-IGNORE_HFILES=mountP.h list.h partitions.h superblocks.h topology.h aix.h dos.h
+IGNORE_HFILES=mountP.h
 
 # Images to copy into HTML directory.
 # e.g. HTML_IMAGES=$(top_srcdir)/gtk/stock-icons/stock_about_24.png
