libmount: add #warning libmount API is not stable yet!
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/mount/src/mount.h.in
+++ b/shlibs/mount/src/mount.h.in
@@ -25,6 +25,10 @@
 extern "C" {
 #endif
 
+#ifndef USE_UNSTABLE_LIBMOUNT_API
+# warning libmount API is not stable yet!
+#endif
+
 #include <stdio.h>
 
 
