--- a/misc-utils/Makefile.am
+++ b/misc-utils/Makefile.am
@@ -35,8 +35,7 @@ endif
 
 if BUILD_LIBBLKID
 sbin_PROGRAMS += blkid findfs wipefs
-bin_PROGRAMS += findmnt
-dist_man_MANS += blkid.8 findfs.8 wipefs.8 findmnt.8
+dist_man_MANS += blkid.8 findfs.8 wipefs.8
 blkid_SOURCES = blkid.c $(top_srcdir)/lib/ismounted.c \
 		$(top_srcdir)/lib/strtosize.c
 blkid_LDADD = $(ul_libblkid_la)
@@ -46,9 +45,6 @@ findfs_CFLAGS = $(AM_CFLAGS) -I$(ul_libblkid_incdir)
 wipefs_SOURCES = wipefs.c $(top_srcdir)/lib/strtosize.c
 wipefs_LDADD = $(ul_libblkid_la)
 wipefs_CFLAGS = $(AM_CFLAGS) -I$(ul_libblkid_incdir)
-findmnt_LDADD = $(ul_libmount_la)
-findmnt_CFLAGS = $(AM_CFLAGS) -I$(ul_libmount_incdir)
-findmnt_SOURCES = findmnt.c $(top_srcdir)/lib/tt.c
 if HAVE_STATIC_BLKID
 sbin_PROGRAMS += blkid.static
 blkid_static_SOURCES = $(blkid_SOURCES)
@@ -56,6 +52,14 @@ blkid_static_LDFLAGS = -all-static
 blkid_static_LDADD = $(ul_libblkid_la)
 blkid_static_CFLAGS = $(AM_CFLAGS) -I$(ul_libblkid_incdir)
 endif
+endif
+
+if BUILD_LIBMOUNT
+bin_PROGRAMS += findmnt
+dist_man_MANS += findmnt.8
+findmnt_LDADD = $(ul_libmount_la)
+findmnt_CFLAGS = $(AM_CFLAGS) -I$(ul_libmount_incdir)
+findmnt_SOURCES = findmnt.c $(top_srcdir)/lib/tt.c
 endif
 
 cal_SOURCES = cal.c $(top_srcdir)/lib/mbsalign.c
