--- a/shlibs/mount/src/Makefile.am
+++ b/shlibs/mount/src/Makefile.am
@@ -13,6 +13,7 @@ libmount_la_SOURCES =	mountP.h version.c utils.c test.c init.c cache.c \
 			optstr.c optmap.c optent.c optls.c iter.c lock.c \
 		      	fs.c tab.c tab_parse.c \
 			$(mountinc_HEADERS) \
+			$(top_srcdir)/lib/at.c \
 			$(top_srcdir)/include/list.h \
 			$(top_srcdir)/lib/mangle.c \
 			$(top_srcdir)/lib/canonicalize.c
