cfdisk: search for ncursesw/ncurses.h
Some distros install the wide version of ncurses side by side with the
non-wide version and place the wide headers in an ncursesw/ subdir.  So
detect that behavior and include the right header with cfdisk.

Signed-off-by: Mike Frysinger <vapier@gentoo.org>

--- a/configure.ac
+++ b/configure.ac
@@ -442,6 +442,7 @@ if test "x$with_ncurses" != xno; then
     if test "x$with_ncurses" = xauto; then
       UTIL_CHECK_LIB(ncursesw, initscr, ncurses)
       if test "x$have_ncurses" = xyes; then
+        AC_CHECK_HEADERS([ncursesw/ncurses.h])
         NCURSES_LIBS="-lncursesw"
       fi
     fi
