libmount: add mnt_split_optstr()
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/mount/src/mount.h.in
+++ b/shlibs/mount/src/mount.h.in
@@ -143,6 +143,8 @@ extern int mnt_optstr_set_option(char **optstr, const char *name,
 				const char *value);
 extern int mnt_optstr_remove_option(char **optstr, const char *name);
 
+extern int mnt_split_optstr(char *optstr, char **user, char **vfs, char **fs);
+
 /* iter.c */
 enum {
 
@@ -229,6 +231,7 @@ extern const char *mnt_fs_get_fstype(mnt_fs *ent);
 extern int mnt_fs_set_fstype(mnt_fs *ent, const char *fstype);
 extern const char *mnt_fs_get_optstr(mnt_fs *ent);
 extern int mnt_fs_set_optstr(mnt_fs *ent, const char *optstr);
+extern int mnt_fs_append_optstr(mnt_fs *fs, const char *optstr);
 extern const char *mnt_fs_get_vfs_optstr(mnt_fs *ent);
 extern const char *mnt_fs_get_fs_optstr(mnt_fs *ent);
 extern int mnt_fs_get_freq(mnt_fs *ent);
