docs: add COPYING.lib* files
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/mount/Makefile.am
+++ b/shlibs/mount/Makefile.am
@@ -10,4 +10,4 @@ endif
 pkgconfigdir = $(usrlib_execdir)/pkgconfig
 pkgconfig_DATA = mount.pc
 
-EXTRA_DIST = mount.pc.in
+EXTRA_DIST = COPYING.libmount mount.pc.in
