libmount: add mnt_get_writable_mtab_path()
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/mount/src/mount.h.in
+++ b/shlibs/mount/src/mount.h.in
@@ -114,6 +114,7 @@ extern int mnt_fstype_is_netfs(const char *type);
 extern int mnt_fstype_is_pseudofs(const char *type);
 extern int mnt_match_fstype(const char *type, const char *pattern);
 extern int mnt_match_options(const char *optstr, const char *pattern);
+extern const char *mnt_get_writable_mtab_path(void);
 
 /* cache.c */
 extern mnt_cache *mnt_new_cache(void);
@@ -209,10 +210,12 @@ extern char *mnt_optls_create_userspace_optstr(mnt_optls *ls);
 extern int mnt_optls_print_debug(mnt_optls *ls, FILE *file);
 
 /* lock.c */
-extern mnt_lock *mnt_new_lock(const char *lockfile, pid_t id);
+extern mnt_lock *mnt_new_lock(const char *lockname, pid_t id);
 extern void mnt_free_lock(mnt_lock *ml);
+
 extern const char *mnt_lock_get_lockfile(mnt_lock *ml);
 extern const char *mnt_lock_get_linkfile(mnt_lock *ml);
+
 extern void mnt_unlock_file(mnt_lock *ml);
 extern int mnt_lock_file(mnt_lock *ml);
 
