build-sys: drop the getsize test out of Makefile.am
The #ifdef TEST_PROGRAM block was removed with commit
3069624180bac35f1cd468249ddb9dfc91d1b7b1 so there is no point in
keeping the tests declared, as it won't build.

Signed-off-by: Diego Elio 'Flameeyes' Pettenò <flameeyes@gmail.com>

--- a/shlibs/blkid/src/Makefile.am
+++ b/shlibs/blkid/src/Makefile.am
@@ -46,7 +46,7 @@ libblkid_la_DEPENDENCIES = $(libblkid_la_LIBADD) blkid.sym blkid.h.in
 libblkid_la_LDFLAGS = -Wl,--version-script=$(ul_libblkid_srcdir)/blkid.sym \
                       -version-info $(LIBBLKID_VERSION_INFO)
 
-tests = test_cache test_config test_dev test_devname test_devno test_getsize \
+tests = test_cache test_config test_dev test_devname test_devno \
 	test_read test_resolve test_save test_tag test_verify test_evaluate
 
 EXTRA_DIST = blkid.sym tst_types.c blkid.h.in
