build-sys: use the silent-rules prefix when generating man pages.
This is backward-compatible with automake 1.10 as the AM_V_GEN macro
is going to be null anyway.

Signed-off-by: Diego Elio 'Flameeyes' Pettenò <flameeyes@gmail.com>

--- a/shlibs/uuid/man/Makefile.am
+++ b/shlibs/uuid/man/Makefile.am
@@ -9,4 +9,4 @@ man_MANS = $(UUID_GENERATE_LINKS)
 CLEANFILES = $(man_MANS)
 
 $(UUID_GENERATE_LINKS): uuid_generate.3
-	echo ".so man3/uuid_generate.3" > $@
+	$(AM_V_GEN)echo ".so man3/uuid_generate.3" > $@
