--- a/sys-utils/Makefile.am
+++ b/sys-utils/Makefile.am
@@ -89,7 +89,7 @@ man_MANS = $(RDEV_MAN_LINKS) $(SETARCH_MAN_LINKS)
 CLEANFILES = $(man_MANS)
 
 $(SETARCH_MAN_LINKS): setarch.8
-	echo ".so man8/setarch.8" > $@
+	$(AM_V_GEN)echo ".so man8/setarch.8" > $@
 
 install-exec-hook:
 	for I in $(SETARCH_LINKS); do \
