build-sys: man aliases don't depend on original man page
Avoid rebuilding the man aliases over and over given that they do not
copy the content but only alias it.

Signed-off-by: Diego Elio 'Flameeyes' Pettenò <flameeyes@gmail.com>

--- a/shlibs/uuid/man/Makefile.am
+++ b/shlibs/uuid/man/Makefile.am
@@ -8,5 +8,5 @@ UUID_GENERATE_LINKS = uuid_generate_random.3 uuid_generate_time.3
 man_MANS = $(UUID_GENERATE_LINKS)
 CLEANFILES = $(man_MANS)
 
-$(UUID_GENERATE_LINKS): uuid_generate.3
+$(UUID_GENERATE_LINKS):
 	$(AM_V_GEN)echo ".so man3/uuid_generate.3" > $@
