--- a/shlibs/mount/src/Makefile.am
+++ b/shlibs/mount/src/Makefile.am
@@ -11,7 +11,7 @@ nodist_mountinc_HEADERS = mount.h
 usrlib_exec_LTLIBRARIES = libmount.la
 libmount_la_SOURCES =	mountP.h version.c utils.c test.c init.c cache.c \
 			optstr.c optmap.c optent.c optls.c iter.c lock.c \
-		      	fs.c tab.c tab_parse.c \
+			fs.c tab.c tab_parse.c mtab.c \
 			$(mountinc_HEADERS) \
 			$(top_srcdir)/lib/at.c \
 			$(top_srcdir)/include/list.h \
@@ -48,7 +48,7 @@ uninstall-hook:
 
 
 tests = test_version test_cache test_optstr test_optls test_lock \
-		  test_tab test_utils
+		  test_tab test_utils test_mtab
 
 tests: all $(tests)
 test_%: %.c
